--- a/BODY/2_preliminaries.tex
+++ b/BODY/2_preliminaries.tex
@@ -67,6 +67,7 @@ The takeaway from this short discussion should be the halving of the spectrum vi
 
 
 \section{Orbifolds}
+\label{sec:pre_orbi}
 
 %Brief general description, orbifolds with singular points. Freely acting orbifolds.
 
@@ -77,6 +78,7 @@ As an example, we can consider $\mathbb{R}^2$, whith reflections $(x,y) \rightar
 In what will follow we will consider freely acting orbifolds, which are orbifolds by construction as a quotient between a manifold and a symmetry group, but don't have any fixed points. The resulting structure then turns out to be a manifold again. In relation to string theory, freely acting orbifolds are interesting because %check why
 
 \section{D-branes}
+\label{sec:pre_branes}
 
 %Boundary conditions, talk about fermions too. Argue that only sym orbifolds admit single branes.
 
