--- a/BODY/3_spectrum.tex
+++ b/BODY/3_spectrum.tex
@@ -66,10 +66,12 @@ Once again, we aim to calculate the massless spectrum. Thus, we want to find the
 \end{equation}
 
 \section{D1/D5 spectrum}
+\label{sec:D1D5_spectrum}
 
 The D1/D5 brane system will be the main example treated in this thesis. It deserves a propper introduction, so first of all let's define it in detail. Consider a stack of $Q_5$ D5 branes covering the 5, 6, 7, 8, 9 directions. Next, consider a stack of $Q_1$ D1 branes laying inside the D5 stack in the 5 direction. Table \ref{table:D1/D5} gives a summary of what was described.
 
 \begin{table}[h]
+    \label{tab:3_d1d5_definition}
     \centering
     \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|}
     \hline
