--- a/bibliography.bib
+++ b/bibliography.bib
@@ -91,3 +91,82 @@ abstract = {We discuss the dimensional reduction for Weyl, Majorana, or Majorana
 
 @book{Polchinski_1998, place={Cambridge, U.K.}, title={String theory I-II. volume II: Superstring theory and beyond}, publisher={Cambridge University Press}, author={Polchinski, Joseph}, year={1998}} 
 
+@article{Giaccari_2023,
+   title={A fresh view on string orbifolds},
+   volume={2023},
+   ISSN={1029-8479},
+   url={http://dx.doi.org/10.1007/JHEP01(2023)173},
+   DOI={10.1007/jhep01(2023)173},
+   number={1},
+   journal={Journal of High Energy Physics},
+   publisher={Springer Science and Business Media LLC},
+   author={Giaccari, Stefano and Volpato, Roberto},
+   year={2023},
+   month=jan }
+
+@article{DIXON1985678,
+title = {Strings on orbifolds},
+journal = {Nuclear Physics B},
+volume = {261},
+pages = {678-686},
+year = {1985},
+issn = {0550-3213},
+doi = {https://doi.org/10.1016/0550-3213(85)90593-0},
+url = {https://www.sciencedirect.com/science/article/pii/0550321385905930},
+author = {L. Dixon and J.A. Harvey and C. Vafa and E. Witten},
+abstract = {String propagation on the quotient of a flat torus by a discrete group is considered. We obtain an exactly soluble and more or less realistic method of string compactification.}
+}
+
+@article{GREEN1983437,
+title = {Superfield theory of type (II) superstrings},
+journal = {Nuclear Physics B},
+volume = {219},
+number = {2},
+pages = {437-478},
+year = {1983},
+issn = {0550-3213},
+doi = {https://doi.org/10.1016/0550-3213(83)90651-X},
+url = {https://www.sciencedirect.com/science/article/pii/055032138390651X},
+author = {Michael B. Green and John H. Schwarz and Lars Brink},
+abstract = {Type (II) superstrings are described by light-cone superfields that are functionals of string superspace coordinates xi(σ) and ϑa(σ) or the conjugate momenta pi(σ) and λa(σ). The interaction hamiltonian and supersymmetry charges are determined to first order in the coupling constant by requiring invariance under the super-Poincaré algebra, some of whose generators are implemented locally in σ. In a suitable low-energy limit the formalism goes smoothly into that of extended supergravity in ten dimensions.}
+}
+@book{GrañaTriendl,
+author = {Graña, Mariana and Triendl, Hagen},
+year = {2017},
+month = {01},
+pages = {},
+title = {String Theory Compactifications},
+isbn = {978-3-319-54315-4},
+doi = {10.1007/978-3-319-54316-1}
+}
+
+@article{Erler_1993,
+   title={Comment on the generation number in orbifold compactifications},
+   volume={153},
+   ISSN={1432-0916},
+   url={http://dx.doi.org/10.1007/BF02096954},
+   DOI={10.1007/bf02096954},
+   number={3},
+   journal={Communications in Mathematical Physics},
+   publisher={Springer Science and Business Media LLC},
+   author={Erler, Jens and Klemm, Albrecht},
+   year={1993},
+   month=may, pages={579–604} }
+
+@misc{gkountoumis2023freely,
+      title={Freely acting orbifolds of type IIB string theory on $T^5$}, 
+      author={George Gkountoumis and Chris Hull and Koen Stemerdink and Stefan Vandoren},
+      year={2023},
+      eprint={2302.09112},
+      archivePrefix={arXiv},
+      primaryClass={hep-th}
+}
+
+@misc{taylor1998lectures,
+      title={Lectures on D-branes, Gauge Theory and M(atrices)}, 
+      author={Washington Taylor},
+      year={1998},
+      eprint={hep-th/9801182},
+      archivePrefix={arXiv},
+      primaryClass={hep-th}
+}
