--- a/packages.tex
+++ b/packages.tex
@@ -33,6 +33,8 @@
 % FOR USING LANDSCAPE PAGES
 \usepackage{lscape}
 
+\usepackage{multirow}
+
 
 % Filling out the text
 \usepackage[parfill]{parskip}
